--- a/TestAuth/Views/Article/Section.cshtml
+++ b/TestAuth/Views/Article/Section.cshtml
@@ -8,30 +8,36 @@
     int ida = 1;
 }
 <link rel="stylesheet" href="~/css/style.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
 <body>
 
     <div id="wrapper">
         <div id="content">
-            <div id="menu">
-                <h2>ETP</h2>
+            <div id="menu" class="box">
+                <h3 class="etp">
+                    <a>ETP</a>
+                    <span class="expand">+</span>
+                </h3>
                 <ul>
+                    <li>procedures.php</li>
                     <li><a asp-controller="Article" asp-action="GetArticle" asp-route-id=1>procedures.php</a></li>
                     <li><a asp-controller="Article" asp-action="GetArticle" asp-route-id=2>company_list.php</a></li>
                     <li><a asp-controller="Article" asp-action="GetArticle" asp-route-id=3>company.php</a></li>
                     <li><a asp-controller="Article" asp-action="GetArticle" asp-route-id=4>protocols_list.php</a></li>
                     <li><a asp-controller="Article" asp-action="GetArticle" asp-route-id=5>protocols.php</a></li>
                 </ul>
-
-                <h2>Go To... </h2>
-                <ul>
-                    <li><a href="">Content</a></li>
-                    <li><a href="">Active</a></li>
-                    <li><a href="">Link 3</a></li>
-                    <li><a href="">Link 4</a></li>
-                    <li><a href="">Link 5</a></li>
-                </ul>
             </div>
+            <script>
+                $(document).ready(function () {
+                    $("ul").hide();
+                    $(".box h3").click(function () {
+                        $(this).next().slideToggle();
+                        var text = $("span", this).text();
+                        $("span", this).text(text != "+" ? "+" : "-")
+                    });
+                });
+            </script>
 
             <div id="maincontent">
 
@@ -39,8 +45,12 @@
                     if (Model != null)
                     {
                         @Html.Raw(Model[0]);
-                        
 
+                        <script>
+                            $(document).ready(function () {
+                                $("ul").show();
+                            });
+                        </script>
 
                         <div class="text-center"><input type="submit" value="Попробовать Пример" onclick="location.href='@Url.Action(Model[1], "api")'" /></div>
                         <p></p>
