--- a/TestAuth/Views/Home/Index.cshtml
+++ b/TestAuth/Views/Home/Index.cshtml
@@ -3,9 +3,18 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<link rel="stylesheet" type="text/css" href="~/css/style.css" />
+<link href="@Url.Content("~/css/style.css")" rel="stylesheet" type="text/css" />
+@section Styles {
+    <link href="@Url.Content("~/css/style.css")" rel="stylesheet" type="text/css" />
+}
 
-    
-</div>
+<body>
+
+
+    <div class="etp">
+        <a>Page</a>
+        <span class="expand">+</span>
+    </div>
+
+</body>
