--- a/TestAuth/wwwroot/css/site.css
+++ b/TestAuth/wwwroot/css/site.css
@@ -1,6 +1,12 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
+.expand {
+    float: right;
+    cursor: pointer;
+}
+.etp{
+	cursor: pointer;
+}
 a.navbar-brand {
   white-space: normal;
   text-align: center;
