--- a/TestAuth/Views/Shared/_Layout.cshtml
+++ b/TestAuth/Views/Shared/_Layout.cshtml
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ITG</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-    <link href="@Url.Content("~/css/style.css")" rel="stylesheet" type="text/css" />
-    @section Styles {
-        <link href="@Url.Content("~/css/style.css")" rel="stylesheet" type="text/css" />
-    }
-    @RenderSection("Styles", false)
+    <link rel="stylesheet" type="text/css" href="@Url.Content("~/css/style.css")">
+
 </head>
 <body>
     <header>
@@ -59,7 +55,6 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
