--- a/TestAuth/wwwroot/css/style.css
+++ b/TestAuth/wwwroot/css/style.css
@@ -1,4 +1,19 @@
 /*
+					Created by villyfiki
+					
+					Leaders of Digital. Ural IT Hub. GazPromBank case. 
+					
+					https://vk.com/teatekking
+					https://github.com/VillyFiki
+					https://t.me/villyfiki
+					
+*/
+
+/*
+*************************************************************************************************************************************************
+*/
+
+/*
 	menu бар слева
 */
 #menu {
@@ -45,8 +60,6 @@
         text-decoration: none;
     }
 
-
-/*		Заголовок		*/
 .title {
     font-size: 14px;
     cursor: pointer;
@@ -63,20 +76,83 @@
 }
 
 /*
-		Content бар справа
+*************************************************************************************************************************************************
+*/
+
+/*
+	Content бар справа
 */
 .maincontent {
     list-style-type: none;
-    word-wrap: break-word;
     width: 620px;
     float: right;
     margin-top: 20px;
-    height: 1999;
+    height: auto;
     box-shadow: 2px 2px 8px rgba(0,0,0,.1);
     border-radius: 10px;
     padding-left: 20px;
+    padding-bottom: 20px;
     padding-right: 10px;
 }
+
+/*
+*************************************************************************************************************************************************
+*/
+
+/*
+	Для статей 
+*/
+.article {
+}
+
+    .article ul {
+        display: block;
+    }
+
+li {
+    display: block;
+}
+
+.article a {
+}
+
+.url {
+}
+
+.tag {
+    text-align: center;
+    background-color: #EFEEF7;
+    margin-top: 20px;
+    width: 60px;
+    padding: 8px;
+    box-shadow: 1px 1px 8px rgba(0,0,0,.1);
+}
+
+.gray {
+    background-color: #f2f2f2;
+    padding: 4px;
+}
+
+table {
+    border-spacing: 0 4px;
+    margin: 0;
+}
+
+td, th {
+    margin: 0;
+    border: 1px solid #000;
+    padding: 6px;
+    font-size: 12px;
+}
+
+
+
+
+
+
+/*
+*************************************************************************************************************************************************
+*/
 
 /*
 	Блоки, враперы, шрифты.
